2008-06-03  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.23.4

==================== 2.23.3 ====================

2008-06-03  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.23.3.

2008-05-19  Vincent Untz  <vuntz@gnome.org>

	* libmenu/gmenu-tree.c: (load_parent_merge_file): initialize variable
	to get less unpredictable results :-)

2008-05-19  Vincent Untz  <vuntz@gnome.org>

	* libmenu/gmenu-tree.c: (load_parent_merge_file_from_basename): remove
	debug spew.

2008-05-19  Vincent Untz  <vuntz@gnome.org>

	* libmenu/gmenu-tree.c: (load_parent_merge_file): use the right
	basename with XDG_MENU_PREFIX (fix previous commit)

2008-05-19  Vincent Untz  <vuntz@gnome.org>

	Complete XDG_MENU_PREFIX support: <MergeFile type="parent"> wasn't
	working with it.

	* libmenu/gmenu-tree.c: (load_parent_merge_file_from_basename): new
	from code from load_parent_merge_file, with an extra comment :-)
	(load_parent_merge_file): if the menu file is applications.menu, handle
	XDG_MENU_PREFIX so that we load the right parent file.

2008-05-19  Vincent Untz  <vuntz@gnome.org>

	* libmenu/gmenu-tree.c: (load_parent_merge_file): do not return the
	fact that we've found a base directory, but the fact that we really a
	found a parent menu file. Fix a bug where the fallback on the filename
	in <MergeFile> couldn't be used. 

2008-05-18  Vincent Untz  <vuntz@gnome.org>

	Fix the values of <DefaultLayout> (ie, show_empty, inline,
	inline_limit, etc.) not being inherited by submenus when the
	<DefaultLayout> node is after the <Menu> node in the .menu file.
	Can also fix other issues when there are multiple <DefaultLayout> nodes
	mixed with the <Menu> nodes.

	* libmenu/gmenu-tree.c: (gmenu_tree_directory_new): do not set the
	default layout values from the parent here since we might not have
	the values of the parent yet. So just set to the default values.
	(set_default_layout_values): new, set the default layout values of a