@@ -1,3 +1,8 @@
+2008-06-17  Vincent Untz  <vuntz@gnome.org>
+
+	* configure.in: require intltool 0.40.0
+	* Makefile.am: remove old intltool cruft
+
 2008-06-03  Vincent Untz  <vuntz@gnome.org>
 
 	* configure.in: post-release bump to 2.23.4
